# ProxyGuard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  config.example.yaml  proxy_guard.py  proxy_guard.spec  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: build-exe.yml  ci.yml
