[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "proxyguard"
version = "3.0.0"
description = "Ultimate anonymous proxy rotator with TUI, mesh circuits, fingerprint spoofing and TUN VPN mode"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "ProxyGuard Contributors" }]
keywords = ["proxy", "anonymity", "socks5", "rotation", "privacy", "vpn", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "python-socks>=2.4",
]

[project.optional-dependencies]
crypto = ["cryptography>=42.0"]
tui   = ["textual>=0.60", "rich>=13.7"]
yaml  = ["pyyaml>=6.0"]
tun   = ["scapy>=2.5"]
all   = [
    "cryptography>=42.0",
    "textual>=0.60",
    "rich>=13.7",
    "pyyaml>=6.0",
    "scapy>=2.5",
]

[project.scripts]
proxy-guard = "proxy_guard:cli"

[project.urls]
Homepage   = "https://github.com/AnnonumusC/ProxyGuard"
Repository = "https://github.com/AnnonumusC/ProxyGuard"
Issues     = "https://github.com/AnnonumusC/ProxyGuard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["proxy_guard*"]
